# ml-cnn-keras-Interpretability

./: .gitignore  01-train-with-functional-model.ipynb  03-Interpretability-with-Grad-CAM.ipynb  README.md  pyproject.toml
app/: app.py
notebooks/: 01-train-with-functional-model.ipynb  02-plot-cnn-keras-models.ipynb  03-Interpretability-with-Grad-CAM.ipynb  04-validation-model.ipynb  05-validation-model-grad-cam.ipynb
saved_model_for_interpretability/: keras_metadata.pb
saved_model_for_interpretability/variables/: variables.index
