[tool.poetry]
name = "explainability"
version = "0.1.0"
description = ""
authors = ["Jorge Castro"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
tensorflow = "^2.8.0"
matplotlib = "^3.5.1"
mlflow = "^1.24.0"
tensorflow-hub = "^0.12.0"
pydot = "^1.4.2"
graphviz = "^0.19.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.12.1"
notebook = "^6.4.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
